edition = "2023";

package test.cliv3;

import "google/protobuf/empty.proto";
import "google/protobuf/go_features.proto";
import "google/protobuf/timestamp.proto";
import "temporal/v1/temporal.proto";

option features.(pb.go).api_level = API_OPAQUE;
option features.field_presence = EXPLICIT;

service ExampleService {
  option (temporal.v1.service) = {task_queue: "example-cliv3"};

  rpc CreateFoo(CreateFooInput) returns (CreateFooOutput) {
    option (temporal.v1.workflow) = {
      name: "test.cliv3.CreateFoo"
      query: {ref: "GetFoo"}
      signal: {
        ref: "SignalFoo"
        start: true
      }
      update: {
        ref: "UpdateFoo"
        start: true
        validate: true
      }
    };
  }

  rpc GetFoo(GetFooInput) returns (GetFooOutput) {
    option (temporal.v1.query) = {name: "test.cliv3.GetFoo"};
  }

  rpc SignalFoo(SignalFooInput) returns (google.protobuf.Empty) {
    option (temporal.v1.signal) = {name: "test.cliv3.SignalFoo"};
  }

  rpc UpdateFoo(UpdateFooInput) returns (UpdateFooOutput) {
    option (temporal.v1.update) = {name: "test.cliv3.UpdateFoo"};
  }
}

message CreateFooInput {
  string name = 1;
  string description = 2;
  google.protobuf.Timestamp expires_at = 3;
}

message CreateFooOutput {
  string id = 1;
}

message GetFooInput {}

message GetFooOutput {
  string name = 1;
  string description = 2;
  double progress = 3;
}

message SignalFooInput {
  double progress = 1;
}

message UpdateFooInput {
  double progress = 1;
}

message UpdateFooOutput {
  string id = 1;
}
